# MACMA

./: CMakeLists.txt  README.md
doc/configs/: config.macma
ihm/: MACMA.glade  MACMA.ui  icon.icns  magma.xcf  resources.qrc
inc/MACMA/graphics/: earthTimer.h  graphics.h  macma.h  macmaGui.h  macmaNonGui.h
inc/MACMA/physics/: activeMargin.h  age.h  cell.h  collision.h  continent.h  continentExtremity.h  earth.h  enum_struct.h  force.h  geoElement.h  interface.h  leftContinentExtremity.h  leftSubduction.h  marker.h  plate.h  plateSection.h  ridge.h  rightContinentExtremity.h  rightSubduction.h  staple.h  subduction.h  warmingZone.h
inc/MACMA/utils/: gnuplot-iostream.h  random.h  utils.h
inc/MACMA/utils/RapidXML/: rapidxml_print.hpp
src/MACMA/: main.cpp
src/MACMA/graphics/: earthTimer.cpp  graphics.cpp  macma.cpp  macmaGui.cpp  macmaNonGui.cpp
src/MACMA/physics/: activeMargin.cpp  age.cpp  cell.cpp  collision.cpp  continent.cpp  continentExtremity.cpp  earth.cpp  force.cpp  geoElement.cpp  interface.cpp  leftContinentExtremity.cpp  leftSubduction.cpp  marker.cpp  plate.cpp  plateSection.cpp  ridge.cpp  rightContinentExtremity.cpp  rightSubduction.cpp  staple.cpp  subduction.cpp  warmingZone.cpp
src/MACMA/utils/: random.cpp  utils.cpp
